# MNISTplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.py  requirements.txt
.github/workflows/: cpp-linter.yml  google-test.yml  linter.yml
Google_tests/: CMakeLists.txt
Google_tests/Files/: data.txt
Google_tests/dataset/: test_dataset.cpp
Google_tests/digit_image/: digit_image_test.cpp
Google_tests/init/: init.cpp
Google_tests/layer/: test_layer.cpp
Google_tests/matrix/: test_matrix.cpp  test_matrix.hpp
Google_tests/mnist_reader/: mnist_test.cpp
Google_tests/network/: test_network.cpp
Models/: trained_100_epch.txt  trained_40_epch.txt
apps/MNISTReader/: test_reader.cpp
apps/Trainer/: train.cpp
apps/inference/: inference.cpp
docs/: dataset.md  digit_image.md  features.md  installation_guide.md  instructions.md  matrix.md  mnist_reader.md  neural_layer.md  neural_network.md  video.md  web.md
include/: DataSet.h  DigitImage.h  confution_matrix.h  constants.h  dataset.h  digit_image.h  matrix.h  mnist_loader.h  neural_layer.h  neural_network.h  utils.h
models/: trained_9178_epch.txt
src/: DataSet.cpp  DigitImage.cpp  constants.cpp  dataset.cpp  matrix.cpp  mnist_loader.cpp  neural_layer.cpp  neural_network.cpp  utils.cpp
templates/: index.html
templates/static/: script.js  styles.css
test/MNISTReader/: test_reader.cpp
test/TrainTest/: train.cpp
test/inference/: inference.cpp
test/init/: hello_world.cpp
test/test_matrix/: test_matrix.cpp
